# oneMKL

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  THIRD-PARTY-PROGRAMS  _clang-format  building_and_running_tests.html  building_the_project.html  building_the_project_with_adaptivecpp.html  building_the_project_with_dpcpp.html  conanfile.py  create_new_backend.html  env_script.sh  genindex.html  index.html  introduction.html  legal_information.md  objects.inv  onemkl-datatypes.html  run_example.sh  search.html  searchindex.js  selecting_a_compiler.html  using_onemkl_with_cmake.html
docs/: CMakeLists.txt  README.md  build_setup.rst  build_setup_with_hipsycl.rst  building_and_running_tests.rst  building_the_project.rst  building_the_project_with_adaptivecpp.rst  building_the_project_with_dpcpp.rst  building_with_cmake.rst  building_with_conan.rst  conf.py  conf.py.in  consuming_with_cmake.rst  create_new_backend.rst  exceptions.inc.rst  faqs.rst  index.rst  introduction.rst  license.rst  onemkl-datatypes.rst  project_cleanup.rst  requirements.txt  selecting_a_compiler.rst  support_and_requirements.rst  using_onemath_with_cmake.rst  using_onemkl_with_cmake.rst
docs/_templates/: layout.html
docs/domains/: dense_linear_algebra.rst  matrix-storage.rst  onemkl_datatypes.rst  sparse_linear_algebra.rst
docs/domains/blas/: asum.rst  axpy.rst  axpy_batch.rst  blas-level-1-routines.inc.rst  blas-level-1-routines.rst  blas-level-2-routines.inc.rst  blas-level-2-routines.rst  blas-level-3-routines.inc.rst  blas-level-3-routines.rst  blas-like-extensions.rst  blas.rst  copy.rst  copy_batch.rst  dgmm_batch.rst  dot.rst  dotc.rst  dotu.rst  gbmv.rst  gemm.rst  gemm_batch.rst  gemm_bias.rst  gemm_ext.rst  gemmt.rst  gemv.rst  ger.rst  gerc.rst  geru.rst  hbmv.rst  hemm.rst  hemv.rst  her.rst  her2.rst  her2k.rst  herk.rst  hpmv.rst  hpr.rst  hpr2.rst  iamax.rst  iamin.rst  nrm2.rst  (+26 more)
docs/domains/lapack/: gebrd.rst  gebrd_scratchpad_size.rst  geqrf.rst  geqrf_batch.rst  geqrf_batch_scratchpad_size.rst  geqrf_scratchpad_size.rst  gerqf.rst  gerqf_scratchpad_size.rst  gesvd.rst  gesvd_scratchpad_size.rst  getrf.rst  getrf_batch.rst  getrf_batch_scratchpad_size.rst  getrf_scratchpad_size.rst  getri.rst  getri_batch.rst  getri_batch_scratchpad_size.rst  getri_scratchpad_size.rst  getrs.rst  getrs_batch.rst  getrs_batch_scratchpad_size.rst  getrs_scratchpad_size.rst  heevd.rst  heevd_scratchpad_size.rst  hegvd.rst  hegvd_scratchpad_size.rst  hetrd.rst  hetrd_scratchpad_size.rst  hetrf.rst  hetrf_scratchpad_size.rst  lapack-linear-equation-routines.inc.rst  lapack-singular-value-eigenvalue-routines.inc.rst  lapack.rst  orgbr.rst  orgbr_scratchpad_size.rst  orgqr.rst  orgqr_batch.rst  orgqr_batch_scratchpad_size.rst  orgqr_scratchpad_size.rst  orgtr.rst  (+41 more)
examples/blas/compile_time_dispatching/: CMakeLists.txt  gemm_usm_cublas.cpp  gemm_usm_mklcpu.cpp  gemm_usm_mklgpu.cpp  gemm_usm_rocblas.cpp
examples/blas/compile_time_dispatching/level3/: CMakeLists.txt  gemm_usm_cublas.cpp  gemm_usm_mklcpu.cpp  gemm_usm_mklcpu_cublas.cpp  gemm_usm_mklgpu.cpp
examples/blas/run_time_dispatching/level3/: CMakeLists.txt  gemm_usm.cpp
examples/dft/: CMakeLists.txt
examples/dft/compile_time_dispatching/: CMakeLists.txt  complex_fwd_buffer_mklcpu.cpp  complex_fwd_buffer_mklgpu.cpp  complex_fwd_usm_mklcpu.cpp  complex_fwd_usm_mklcpu_cufft.cpp
examples/dft/run_time_dispatching/: CMakeLists.txt  complex_fwd_usm.cpp  real_fwd_usm.cpp
examples/lapack/compile_time_dispatching/: CMakeLists.txt  faulty.cpp  getrs_usm_cusolver.cpp  getrs_usm_mklcpu.cpp  getrs_usm_mklcpu_cusolver.cpp  getrs_usm_mklgpu.cpp
examples/lapack/run_time_dispatching/: CMakeLists.txt  getrs_usm.cpp
examples/rng/compile_time_dispatching/: CMakeLists.txt  uniform_usm_curand.cpp  uniform_usm_mklcpu.cpp  uniform_usm_mklcpu_curand.cpp  uniform_usm_mklgpu.cpp
examples/rng/device/: CMakeLists.txt  uniform.cpp
examples/rng/device/include/: rng_example_helper.hpp
examples/sparse_blas/: CMakeLists.txt
examples/sparse_blas/compile_time_dispatching/: CMakeLists.txt  sparse_blas_gemv_usm_mklcpu.cpp  sparse_blas_spmv_usm_mklcpu.cpp  sparse_blas_spmv_usm_mklcpu_cusparse.cpp
examples/sparse_blas/run_time_dispatching/: CMakeLists.txt  sparse_blas_gemv_usm.cpp  sparse_blas_spmv_usm.cpp
src/: CMakeLists.txt  config.hpp.in
src/blas/: CMakeLists.txt  blas_loader.cpp  function_table.hpp  loader.hpp
src/blas/backends/: CMakeLists.txt  backend_wrappers.cxx
src/blas/backends/cublas/: CMakeLists.txt  cublas_batch.cpp  cublas_handle.hpp  (+13 more)
src/dft/: CMakeLists.txt  descriptor.cpp  descriptor.cxx  descriptor_config_helper.hpp  dft_loader.cpp  execute_helper_generic.hpp  function_table.hpp
src/dft/backends/: CMakeLists.txt  backend_backward_instantiations.cxx  backend_compute_signature.cxx  backend_forward_instantiations.cxx  backend_wrappers.cxx  descriptor.cpp  descriptor.cxx  stride_helper.hpp
src/include/: allocator_helper.hpp  common_mkl_types_conversion.hpp  common_onemkl_conversion.hpp  dtype_string.hpp  error_helper.hpp  exceptions_helper.hpp  function_table_initializer.hpp  runtime_support_helper.hpp
src/lapack/: CMakeLists.txt  function_table.hpp  lapack_loader.cpp
src/lapack/backends/: CMakeLists.txt
src/rng/: CMakeLists.txt  function_table.hpp  rng_loader.cpp
src/rng/backends/: CMakeLists.txt
src/sparse_blas/: CMakeLists.txt  common_op_verification.hpp  enum_data_types.hpp  function_table.hpp  generic_container.hpp  macros.hpp  matrix_view_comparison.hpp  sparse_blas_loader.cpp  sycl_helper.hpp
src/sparse_blas/backends/: CMakeLists.txt  backend_wrappers.cxx  common_launch_task.hxx
tests/unit_tests/: CMakeLists.txt  main_test.cpp
tests/unit_tests/blas/: CMakeLists.txt
tests/unit_tests/dft/: CMakeLists.txt
tests/unit_tests/include/: config.hpp.in  test_helper.hpp
tests/unit_tests/lapack/: CMakeLists.txt
tests/unit_tests/rng/: CMakeLists.txt
tests/unit_tests/sparse_blas/: CMakeLists.txt
(+1241 files in other folders)
